# COSC-3380-Project

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: master_cosc-3380.yml  release.yml
client/: index.html  package-lock.json  package.json  themes.json  themes.tsxt  tsconfig.app.json  vite.config.ts
client/public/: index.html  themes.json
client/src/: App.tsx  Routes.tsx  index.css  main.tsx  vite-env.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src/api/: admin-appeals.api.ts  admin.api.ts  album.api.ts  api.ts  appeals.api.ts  artist.api.ts  auth.api.ts  comment.api.ts  dataReports.api.ts  index.ts  library.api.ts  notifications.api.ts  playlist.api.ts  report.api.ts  reports.api.ts  search.api.ts  song.api.ts  stats.api.ts  user.api.ts
client/src/components/: index.ts
client/src/constants/: audioQueue.constants.ts  index.ts
client/src/contexts/: AudioQueueContext.tsx  AuthContent.tsx  AuthContext.tsx  ContextMenuContext.tsx  SettingsContext.tsx  index.ts
client/src/hooks/: index.ts  useAsyncData.ts  useAudioManager.ts  useColumnWidths.ts  useDataTableState.ts  useElementWidth.ts  useErrorCheck.ts  useFollowStatus.ts  useKeyboardShortcuts.ts  useLikeStatus.ts  (+2 more)
docs/: Requirement-Document.md  SCHEMA.md  cosc-3380-doc.typ
scripts/: build.js  crc.js  dummy-data.js
server/: check-artists.ts  check-no-artist-songs.ts  check-recent-songs.ts  check-song-sizes.ts  check-songs.ts  fix-durations.ts  package-lock.json  package.json  tsconfig.json
server/src/: server.ts
(+528 files in other folders)
